Fixed the errors caused by me adding the volume series. Also changed some of the transparency settings in the CSS to make the components more visible.

--- a/examples/angular-example/css/charts.css
+++ b/examples/angular-example/css/charts.css
@@ -1,7 +1,10 @@
 #scottLogicChart {
-    margin-left: 0;
-    margin-top: 0;
-    width: 100%;
+    background: #f00;
+}
+
+#scottLogicChart svg {
+    background: #00f;
+    opacity: 0.5;
 }
 
 .chart .axis text {
@@ -48,8 +51,7 @@
 .chart .gridlines {
     fill: none;
     stroke-width: 0.5;
-    stroke-opacity: 0.1;
-    stroke: black;
+    stroke: #ccc;
 }
 
 .chart .overlay {
@@ -59,16 +61,14 @@
 
 .chart line.crosshairs {
     fill: none;
-    stroke: black;
-    stroke-width: 1;
-    stroke-opacity: 0.1;
+    stroke: #999;
+    stroke-width: 0.5;
 }
 
 .chart circle.crosshairs {
     fill: none;
     stroke: black;
     stroke-width: 1;
-    stroke-opacity: 0.5;
 }
 
 .chart text.crosshairs {
@@ -79,7 +79,6 @@
     fill: none;
     stroke: #f09;
     stroke-width: 1;
-    stroke-opacity: 0.1;
     stroke-dasharray: 3, 3;
 }
 
@@ -87,7 +86,6 @@
     fill: none;
     stroke: #f09;
     stroke-width: 1;
-    stroke-opacity: 0.5;
     stroke-dasharray: 3, 3;
 }
 
@@ -100,7 +98,6 @@
     stroke: #0f9;
     stroke-width: 1;
     stroke-dasharray: 3, 3;
-    stroke-opacity: 0.5;
 }
 
 .chart .tracker {
@@ -108,7 +105,6 @@
     stroke: #09f;
     stroke-width: 1;
     stroke-dasharray: 3, 3;
-    stroke-opacity: 0.5;
 }
 
 .chart g.tracker.open { stroke: #09f;  }
@@ -118,7 +114,7 @@
 
 .chart .bollingerBandArea {
     fill: #f90;
-    fill-opacity: 0.1;
+    fill-opacity: 0.15;
     stroke-width: 0;
 }
 
@@ -126,14 +122,14 @@
     fill: none;
     stroke: #f90;
     stroke-width: 1;
-    stroke-opacity: 0.2;
+    stroke-opacity: 0.5;
 }
 
 .chart .bollingerBandLower {
     fill: none;
     stroke: #f90;
     stroke-width: 1;
-    stroke-opacity: 0.2;
+    stroke-opacity: 0.5;
 }
 
 .chart .bollingerAverage {
